--- a/dynamic-forms/angular.json
+++ b/dynamic-forms/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ngrx-salad": {
+    "dynamic-forms": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ngrx-salad",
+            "outputPath": "dist/dynamic-forms",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -23,9 +23,6 @@
               "src/assets"
             ],
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
               "src/styles.css"
             ],
             "scripts": []
@@ -53,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ngrx-salad:build"
+            "browserTarget": "dynamic-forms:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ngrx-salad:build:production"
+              "browserTarget": "dynamic-forms:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ngrx-salad:build"
+            "browserTarget": "dynamic-forms:build"
           }
         },
         "test": {
@@ -75,9 +72,6 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              {
-                "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
-              },
               "src/styles.css"
             ],
             "scripts": [],
@@ -101,7 +95,7 @@
         }
       }
     },
-    "ngrx-salad-e2e": {
+    "dynamic-forms-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -109,11 +103,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ngrx-salad:serve"
+            "devServerTarget": "dynamic-forms:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ngrx-salad:serve:production"
+              "devServerTarget": "dynamic-forms:serve:production"
             }
           }
         },
@@ -129,5 +123,5 @@
       }
     }
   },
-  "defaultProject": "ngrx-salad"
+  "defaultProject": "dynamic-forms"
 }
